--- a/backend/templates/proxy_host.conf
+++ b/backend/templates/proxy_host.conf
@@ -31,6 +31,7 @@ proxy_http_version 1.1;
   location / {
 
 {% include "_access.conf" %}
+{% include "_openid_connect.conf" %}
 {% include "_hsts.conf" %}
 
     {% if allow_websocket_upgrade == 1 or allow_websocket_upgrade == true %}
